<resources>
    <string name="app_name">ADHD form</string>
    <string name="user">User :</string>
    <string name="password">Password</string>
    <string name="new_register">ลงทะเบียนผู้ใช้?</string>
    <string name="login">ลงชื่อเข้าใช้</string>
    <string name="name">name :</string>
    <string name="save">บันทึกและดูผล</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="femaale">Femaale</string>
    <string name="type">Type</string>
    <string name="teacher">Teacher</string>
    <string name="parent">Parent</string>
    <string name="title_havespace">Have Space</string>
    <string name="message_havespece">Please Fill Every Blank</string>
    <string name="title_nonset">Without Check Type</string>
    <string name="message_noncheck">Please Check on Type</string>
    <string name="title_userfalse">User False</string>
    <string name="message_userfalse">No This User in my Database</string>
    <string name="title_passwordfalse">Password False</string>
    <string name="message_passwordfalse">Please Try Again Password False</string>
    <string name="title_nonChooseImage">No choose Image</string>
    <string name="message_nonChooseImage">Pleashe choose image</string>
    <string name="message_overAge">please choose age 6 - 18</string>
    <string name="title_overAge">Wrong Age</string>
    <string name="title_nonGender">Without Check gender</string>
    <string name="message_nonGender">Please check on gender</string>


    <string name="text">ท่านกำลังทำแบบประเมินของ</string>
    <string name="text2">ด้วยแบบประเมิน</string>
    <string name="text3">กรุณาตอบคำถามให้้ครบ</string>
    <string name="startTest">เริ่มทำแบบประเมิน</string>
    <string name="snap1">1. มักไม่ละเอียดรอบคอบหรือสะเพร่าในการทำงานต่าง ๆ เช่น การบ้าน</string>
    <string name="snap2">2. ทำอะไรนาน ๆ ไม่ได้</string>
    <string name="snap3">3. ดูเหมือนไม่ค่อยฟังเวลามีคนพูดด้วย</string>
    <string name="snap4">4. มักทำการบ้านไม่เสร็จ หรือทำงานที่ได้รับมอบหมายไม่สำเร็จ</string>
    <string name="snap5">5. จัดระเบียบงานและกิจกรรมต่าง ๆ ไม่เป็น</string>
    <string name="snap6">6. มักหลีกเลี่ยงกิจกรรรมที่ต้องใช้ความอดทนในการทำให้สำเร็จ</string>
    <string name="snap7">7. ทำของหายบ่อย ๆ (เช่นของเล่น, สมุดจดงาน, เครื่องเขียน ฯลฯ</string>
    <string name="snap8">8. วอกแวกง่าย</string>
    <string name="snap9">9. ขี้ลืม</string>
    <string name="snap10">10. มือเท้ายุกยิก นั่งบิดไปบิดมา</string>
    <string name="snap11">11. นั่งไม่ติดที่ ชอบลุกจากที่นั่งในชั้นเรียนหรือจากที่ที่ควรจะนั่งเรียบร้อย</string>
    <string name="snap12">12. วิ่งหรือปีนป่ายมากเกินควรอย่างไม่รู้กาละเทศะ</string>
    <string name="snap13">13. เล่นหรือทำกิจกรรมเงียบ ๆ ไม่เป็น</string>
    <string name="snap14">14. พร้อมจะเคลื่อนไหวอยู่เสมอ เหมือน“ติดเครื่อง”อยู่ตลอดเวลา</string>
    <string name="snap15">15. พูดมาก</string>
    <string name="snap16">16. มักโพล่งคำตอบออกมาก่อนจะฟังคำถามจบ</string>
    <string name="snap17">17. ไม่ชอบรอคิว</string>
    <string name="snap18">18. ชอบสอดแทรกผู้อื่น(เช่นพูดแทรกขณะผู้ใหญ่กำลังสนทนากัน )</string>
    <string name="snap19">19. อารมณ์เสียง่าย</string>
    <string name="snap20">20. ชอบโต้เถียงกับผู้ใหญ</string>
    <string name="snap21">21. ไม่ยอมทำตามสิ่งที่ผู้ใหญ่สั่งหรือวางกฎเกณฑ์ไว้</string>
    <string name="snap22">22. จงใจก่อกวนผู้อื่น</string>
    <string name="snap23">23. มักตำหนิผู้อื่นในสิ่งที่ตนเองทำผิด</string>
    <string name="snap24">24. ขี้รำคาญ</string>
    <string name="snap25">25. โกรธขึ้งบึ้งตึงเป็นประจำ</string>
    <string name="snap26">26. เจ้าคิดเจ้าแค้น</string>
    <string name="thass1">1. เดินไปเดินมาในเวลาเรียนโดยไม่ได้รับอนุญาติ</string>
    <string name="thass2">2. พูดโพล่ง ขัดจังหวะในเวลาครูสอน</string>
    <string name="thass3">3. แหย่ ล้อเลียน แกล้งเด็กคนอื่น</string>
    <string name="thass4">4. อยู่ไม่นิ่ง มักหาอะไรทำหรือเล่นตลอดเวลา</string>
    <string name="thass30">30. ลืมส่งการบ้าน</string>
    <string name="thass29">29. หลีกเลี่ยงการทำงานที่ต้องใช้ความคิด</string>
    <string name="thass28">28. สมาธิสั้น(ยกเว้นเวลาดูทีวี เล่นเกมส์ หรือทำสิ่งที่ชอบ)</string>
    <string name="thass27">27. ไม่จดจ่อกับงานที่กำลังทำ (ยกเว้นกำลังทำสิ่งที่ชอบ)</string>
    <string name="thass26">26. ทำงานไม่เรียบร้อย สะเพร่า ไม่รอบคอบ</string>
    <string name="thass25">25. ทำหนังสือ อุนกรณ์การเรียน หรือของใช้ส่วนตัวหาย</string>
    <string name="thass24">24. นำของที่จำเป็นต้องการเรียนมาไม่ครบ</string>
    <string name="thass23">23. วอกแวกง่าย</string>
    <string name="thass22">22. ต้องเรียก หรือกระตุ้นเพื่อให้งานเสร็จ</string>
    <string name="thass21">21. โอ้เอ้ใช้เวลานานกว่าจะเริ่มงานได้</string>
    <string name="thass20">20. ฟังอะไรประเดี๋ยวเดียวก็หมดความสนใจ</string>
    <string name="thass19">19. เหม่อ ใจลอย</string>
    <string name="thass18">18. ทำงานช้า ทำงานไม่เสร็จในเวลาที่กำหนด</string>
    <string name="thass17">17. ไม่ตั้งใจเรียน</string>
    <string name="thass16">16. ขาดความรับผิดชอบ</string>
    <string name="thass15">15. ส่งเสียงดังในห้องเรียน</string>
    <string name="thass14">14. ไม่รู้จักการรอคอย</string>
    <string name="thass13">13. รบกวนเพื่อนหรือครูในห้องเรียน</string>
    <string name="thass12">12. ซน</string>
    <string name="thass11">11. เล่นรุนแรง เล่นแผลงๆ หรือเสี่ยงอันตราย</string>
    <string name="thass10">10. ทำอะไรโดยไม่คิดถึงผลที่จะตามมา</string>
    <string name="thass9">9. อารมณ์เสีย หงุดหงิดง่าย</string>
    <string name="thass8">8. พูดมากจนน่ารำคาญ</string>
    <string name="thass7">7. เล่นเสียงดัง</string>
    <string name="thass6">6. มักมีเรื่องทะเลาะวิวาทกับเด็กอื่น</string>
    <string name="thass5">5. ใจร้อน วู่วาม</string>
    <string name="age">age: (6-18 ปี)</string>
    <string name="title_activity_before_test">BeforeTestActivity</string>
    <string name="selectTest">กรุณาเลือกแบบประเมินที่่ต้องการทำ</string>
    <string name="sdq1">1.ห่วงใยความรู้สึกคนอื่น</string>
    <string name="sdq2">2.อยู่ไม่นิ่ง นั่งนานๆไม่ได้</string>
    <string name="sdq3">3.มักจะบ่นว่าปวดศีรษะ ปวดท้อง ไม่สบาย</string>
    <string name="sdq4">4.เต็มใจแบ่งปันสิ่งของให้เพื่อน(ขนม ของเล่น ดินสอ เป็นต้น)</string>
    <string name="sdq5">5.มักจะอาละวาดหรือโมโหร้าย</string>
    <string name="sdq6">6.ค่อนข้างแยกตัว ชอบเล่นคนเดียว</string>
    <string name="sdq7">7.เชื่อฟัง มักจะทำตามที่ผู้ใหญ่ต้องการ</string>
    <string name="sdq8">8.กังวลใจหลายเรื่อง ดูวิตกกังวลเสมอ</string>
    <string name="sdq9">9.เป็นที่พึ่งได้เวลาคนอื่นเสียใจ</string>
    <string name="sdq10">10.อยู่ไม่สุข วุ่นวายอย่างมาก</string>
    <string name="sdq11">11.มีเพื่อนสนิท</string>
    <string name="sdq12">12.มักมีเรื่องทะเลาะวิวาทกับเด็กคนอื่นหรือรังแกเด็กคนอื่น</string>
    <string name="sdq13">13.ดูไม่มีความสุข ท้อแท้ ร้องไห้บ่อย</string>
    <string name="sdq14">14.เป็นที่ชื่นชอบของเพื่อน</string>
    <string name="sdq15">15.วอกแวกง่าย สมาธิสั้น</string>
    <string name="sdq16">16.เครียด ไม่ยอมห่างเวลาอยู่ในสถานการณ์ที่ไม่คุ้น</string>
    <string name="sdq17">17.ใจดีกับเด็กที่เล็กกว่า</string>
    <string name="sdq18">18.ชอบโกหกหรือขี้โกง</string>
    <string name="sdq19">19.ถูกเด้กคนอื่นล้อเลียนหรือรังแก</string>
    <string name="sdq20">20.ชอบอาสาช่วยเหลือคนอื่น(พ่อ แม่ ครู เด็กคนอื่น)</string>
    <string name="sdq21">21.คิดก่อนทำ</string>
    <string name="sdq22">22.ขโทยของ ของที่บ้าน ที่โรงเรียนหรือที่อื่น</string>
    <string name="sdq23">23.เข้ากับผู้ใหญ่ได้ดีกว่าเด็กวัยเดียวกัน</string>
    <string name="sdq24">24.ขี้กลัว รู้สึกหวาดกลัวง่าย</string>
    <string name="sdq25">25.ทำงานได้จนเสร็จ มีความตั้งใจในการทำงาน</string>
    <string name="headApp">แอปพลิเคชันประเมินความเสี่ยงสมาธิสั้น เบื้องต้นในเด็กอายุ6-18ปี สำหรับครูและผู้ปกครอง</string>


    <string name="hello_world">Hello world!</string>
        
    <string name="menu_settings">Settings</string>
        
    <string name="title_activity_main">AChartEngineBarChart</string>
        
    <string name="str_btn_chart">Income vs Expense Bar Chart</string>
    <string name="StrSnap">ผศ.นพ.ณัทธร พิทยรัตน์เสถียร ได้แปลแบบสอบถาม SNAP-IV เป็นฉบับภาษาไทยใช้ประเมินอาการขาดสมาธิ หรือ inattention ,อาการอยู่ไม่นิ่ง/หุนหันพลันแล่น หรือ hyperactivity/impulsivity และ ยังสามารถประเมินอาการดื้อต่อต้านหรือoppositional defiantได้อีกด้วย ,ค่าความเชื่อมั่นของครูอยู่ที่0.98และครูอยู่ที่0.96</string>
    <string name="strThass">ถูกพัฒนาโดย รศ.นพ.ชาญวิทย์ พรนภดลโดยจะใช้คำถามในแต่ละช่วงวัยที่แตกต่างกันเนื่องจากแบบประเมินนี้ตระหนักว่าอาการสมาธิสั้นสามารถเปลี่ยนแปลงตามช่วงวัย นอกจากนี้แบบประเมินTHASSยังครอบคลุมอาการซน-อยู่ไม่นิ่ง(hyperactivity),อาการหุนหันพลันแล่น(impulsivity)และอาการขาดสมาธิ(inattention),ค่าความเชื่อมั่นของครูอยู่ที่0.96และครูอยู่ที่0.98</string>
    <string name="strSdq">แบบประเมินนี้ถูกแปลเป็นภาษาไทยโดยกรมสุขภาพจิต ชื่อแบบ“ประเมินจุดแข็งและจุดอ่อน”โดยประเมิน 5ด้าน คือ (1)ปัญหาด้านอารมณ์,(2)ปัญหาความสัมพันธ์กับเพื่อ,(3)ปัญหาพฤติกรรมอยู่ไม่นิ่ง/สมาธิสั้น,(4)ปัญหาพฤติกรรมเกเร/ความประพฤติ และ(5)ความสามารถทางสังคม แอปพลิเคชันนี้จะประเมินผลแค่ด้านปัญหาพฤติกรรมอยู่ไม่นิ่ง/สมาธิสั้น เท่านั้น</string>


</resources>
