<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="adhd.sirikan.pimpicha.adhdform.RegisterActivity">



    <ScrollView
        android:padding="@dimen/my_margin2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <ImageView
                android:id="@+id/imvRegister"
                android:src="@drawable/ic_user_web"
                android:layout_gravity="center_horizontal"
                android:layout_width="250dp"
                android:layout_height="250dp" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:src="@mipmap/ic_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edtName"
                    android:inputType="text"
                    android:hint="@string/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imvBirthDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_calendar"/>
                <TextView
                    android:id="@+id/txtBirthDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your Birth Day"
                    android:textSize="@dimen/h2"
                    android:layout_gravity="center_vertical"/>


            </LinearLayout>

            <Spinner
                android:id="@+id/spnClass"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"></Spinner>
            <TextView
                android:layout_marginTop="@dimen/my_margin2"
                android:textStyle="bold"
                android:textSize="@dimen/h2"
                android:text="@string/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/ragGender"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male">

                </RadioButton>

                <RadioButton
                    android:id="@+id/radFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femaale"></RadioButton>

            </RadioGroup>



            <Button
                android:id="@+id/btnSave"
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />




        </LinearLayout>

    </ScrollView>

</RelativeLayout>



