<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="adhd.sirikan.pimpicha.adhdform.MainActivity"
   >



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/btnLogin">

            <TextView
                android:id="@+id/textAppname"
                android:layout_width="254dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="39dp"
                android:gravity="center"
                android:text="@string/headApp"
                android:textStyle="bold" />


            <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/my_margin"
                android:layout_marginRight="@dimen/my_margin"
                android:id="@+id/linearLayout"
                android:layout_marginTop="60dp"

                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/logo200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_user" />

                    <EditText
                        android:textColor="@color/colorPrimaryDark"
                        android:inputType="text"
                        android:hint="@string/user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtUser"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:src="@mipmap/ic_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:textColor="@color/colorPrimaryDark"
                        android:id="@+id/edtpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </LinearLayout>
                <TextView
                    android:textSize="@dimen/h2"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/new_register"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtNewRegister"
                    android:clickable="true"/>

            </LinearLayout>

            <Button
                android:layout_marginTop="50dp"
                android:id="@+id/btnLogin"
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button"
                android:text="@string/login"
               />



        </LinearLayout>
    </ScrollView>



</RelativeLayout>
